--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,10 @@ jobs:
         run: pip install flake8
       - name: Run flake8
         run: flake8 api/
+      - name: Install pytest
+        run: pip install pytest
+      - name: Run pytest
+        run: pytest api/*.py
 
 
   deploy-to-vercel:
