--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,10 @@ jobs:
         run: flake8 api/
       - name: Install dependencies in requirements.txt 
         run: pip install -r requirements.txt
+
+  unit-test:
+    needs: python-formatting
+    runs-on: ubuntu-latest
       - name: Run pytest
         run: pytest api/*.py
       - name: Install Pytest GitHub Report
@@ -27,7 +31,7 @@ jobs:
         run: pytest api/*.py
 
   deploy-to-vercel:
-    needs: python-formatting
+    needs: unit-test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
