--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "functions": {
         "api/app": {
-            "includeFiles": ["githubapi.py"]
+            "includeFiles": ["/api/githubapi.py"]
         }
     },
     "rewrites": [
