--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,11 @@
-{
+{   
+    "version": 2,
+    "builds": [
+        {
+            "src": "api/**/*.py",
+            "use": "@vercel/python"
+        }
+    ],
     "rewrites": [
         {
             "source": "/(.*)",
