--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,4 @@
 {   
-    "version": 2,
-    "builds": [
-        {
-            "src": "api/**/*.py",
-            "use": "@vercel/python"
-        }
-    ],
     "rewrites": [
         {
             "source": "/(.*)",
@@ -15,7 +8,7 @@
     "functions": {
         "api/app": {
             "includeFiles": "api/functions/**",
-            "runtime": "@vercel/python"
+            "runtime": "python3.9"
         }
     }
 }
