--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
     "rewrites": [
         {
             "source": "/(.*)",
-            "destination": "/api/app"
+            "destination": "/api/app.py"
         }
     ]
 }
