--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         run: pip install -r requirements.txt
       - name: Run pytest
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: pytest api/*.py
       - name: Install Pytest GitHub Report
         run: pip install pytest-github-report
@@ -37,7 +37,7 @@ jobs:
         env:
           pytest_github_report: true
           pytest_verbosity: 2
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: pytest api/*.py
 
   deploy-to-vercel:
